Update website: Change waitlist popup trigger to FAQ section and update reviews section to Beta Testers

--- a/website/index.html
+++ b/website/index.html
@@ -710,8 +710,8 @@
     <section class="reviews" id="reviews">
         <div class="container">
             <div class="section-header">
-                <span class="section-badge">Reviews</span>
-                <h2 class="section-title">Loved by<br><span class="gradient-text">Our Users</span></h2>
+                <span class="section-badge">Beta Reviews</span>
+                <h2 class="section-title">Loved by<br><span class="gradient-text">Beta Testers</span></h2>
             </div>
             
             <div class="reviews-grid">
