Update website text: change 'thriving' to 'Full Health!'

--- a/website/index.html
+++ b/website/index.html
@@ -230,7 +230,7 @@
                 <div class="feature-row" data-aos="fade-up">
                     <div class="feature-text">
                         <h3>Pet Health System</h3>
-                        <p>Your steps directly affect your pet's mood - from sick to thriving!</p>
+                        <p>Your steps directly affect your pet's mood - from sick to Full Health!</p>
                     </div>
                     <div class="feature-mockup">
                         <div class="feature-phone">
