Fix achievement logic, add goal change alert, replace untrackable achievements, and rename Sky Dash to Sky Fall
- Fixed Never Miss Monday achievement to properly track 4 consecutive Mondays
- Fixed all consecutive-day achievement tracking bugs (daily walker, weekend warrior, etc.)
- Added confirmation alert when users change daily step goal
- Replaced 6 untrackable time-based achievements with 6 new trackable ones:
  * Active Companion, Wellness Keeper, Goal Master, Step Enthusiast, Health Conscious, Daily Engager
- Renamed Sky Dash game to Sky Fall throughout app and website
- Updated all references, enum values, variables, and file names

--- a/website/index.html
+++ b/website/index.html
@@ -136,7 +136,7 @@
                     <div class="card-content">
                         <span class="card-date">Fun Minigames</span>
                         <h3>Play With Your Pet</h3>
-                        <p>Mood Catch, Memory Match, Sky Dash & more!</p>
+                        <p>Mood Catch, Memory Match, Sky Fall & more!</p>
                     </div>
                 </div>
                 <div class="spotlight-card small">
@@ -543,17 +543,17 @@
                     </div>
                 </div>
                 
-                <!-- Sky Dash -->
-                <div class="game-phone-wrapper" data-game="sky-dash">
+                <!-- Sky Fall -->
+                <div class="game-phone-wrapper" data-game="sky-fall">
                     <div class="game-phone-mockup">
                         <div class="game-phone-notch"></div>
                         <div class="game-phone-screen">
-                            <img src="Screenshots/8.PNG" alt="Sky Dash Game">
+                            <img src="Screenshots/8.PNG" alt="Sky Fall Game">
                         </div>
                     </div>
                     <div class="game-phone-label">
                         <span class="game-emoji">🌟</span>
-                        <span class="game-name">Sky Dash</span>
+                        <span class="game-name">Sky Fall</span>
                         <span class="game-desc">Dodge walls and fly to the top!</span>
                     </div>
                 </div>
