Update Sky Fall game description
- Changed from 'Dodge walls and rise to the top!' to 'Dodge walls to save your pet!'
- Updated in app (ChallengesView, SkyFallGameView, SkyDashGameView)
- Updated on website (index.html)
- More engaging and pet-focused messaging

--- a/website/index.html
+++ b/website/index.html
@@ -554,7 +554,7 @@
                     <div class="game-phone-label">
                         <span class="game-emoji">🌟</span>
                         <span class="game-name">Sky Fall</span>
-                        <span class="game-desc">Dodge walls and fly to the top!</span>
+                        <span class="game-desc">Dodge walls to save your pet!</span>
                     </div>
                 </div>
                 
